2009-03-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added an option to specify the interval between tracker requests.
	If non-zero value is specified, aria2 uses it and ignores the
	interval value in the response of tracker. If zero is specified,
	aria2 determines the inteval value based on the tarcker response
	and download progress.
	* src/DefaultBtAnnounce.cc
	* src/DefaultBtAnnounce.h
	* src/OptionHandlerFactory.cc
	* src/RequestGroup.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h
	
2009-03-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added operator+=, operator-=, operator-
	* src/TransferStat.cc
	* src/TransferStat.h
	
2009-03-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Refactored RarestPieceSelector to reduce CPU load, especially for
	addPieceStats.	
	* src/RarestPieceSelector.cc
	* src/RarestPieceSelector.h
	
2009-03-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Refactored getMissingIndexRandomly, getFirstMissingIndex,
	getAllMissingBlockIndexes to reduce a call to
	array_function_base::operator[].
	* src/BitfieldMan.cc
	
2009-03-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Cached TransferStat/download speed to avoid to sum them up in each
	call.	
	* src/DefaultPeerStorage.cc
	* src/DefaultPeerStorage.h
	* src/SegmentMan.cc
	* src/SegmentMan.h

2009-03-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Typedefed cuid_t as int32_t in Command.h
	* src/CUIDCounter.h
	* src/Command.cc
	* src/Command.h
	* src/DownloadEngine.cc
	* src/DownloadEngine.h
	* src/PeerStat.h
	* src/SegmentMan.cc
	* src/SegmentMan.h

2009-03-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Reduced the number of calls to PeerStorage::calculateStat() and
	SegmentMan::calculateDownloadSpeed() to lower CPU usage on higher
	transfer rate.	
	* src/DefaultBtInteractive.cc
	* src/DefaultBtMessageDispatcher.cc
	* src/DefaultPeerStorage.cc
	* src/DefaultPeerStorage.h