@@ -368,6 +368,13 @@ BitTorrent Specific Options
   Seed previously downloaded files without verifying piece hashes.
   Default: 'false'
 
+*--bt-tracker-interval*=SEC::
+  Set the interval in seconds between tracker requests. This
+  completely overrides interval value and aria2 just uses this value
+  and ignores the minInterval and interval value in the response of
+  tracker. If '0' is set, aria2 determines interval based on the
+  response of tracker and the download progress.  Default: '0'
+
 *--dht-entry-point*=HOST:PORT::
   Set host and port as an entry point to DHT network.
 
